internal/postiz/base/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postiz
  labels:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: postiz
spec:
  selector:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
