internal/postiz/base/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz
  labels:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: postiz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "16k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    cert-manager.io/cluster-issuer: xdew-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - xxx
      secretName: postiz-tls
  rules:
    - host: xxx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postiz
                port:
                  number: 80
